<resources>
    <string name="app_name">University Helper</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="schedule">Schedule</string>
    <string name="schedule_of_bells">Bell\'s schedule</string>
    <string name="note">Note</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="menu">Menu</string>
    <string name="details">Детальная информация</string>
    <string name="title_activity_main">Ближайшие события</string>
    <string name="new_note">Новая заметка</string>

    <string name="note_title_stub">Create new project for DB</string>
    <string name="note_desc_stub">All students of our group have to create in SQL Workbench new project
    and pass it on a week</string>
    <string name="note_time_stub">12.02, 13.00 PM</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="edit">Изменить</string>
    <string name="create">Создать</string>
    <string name="remove">Удалить</string>
    <string name="title">Заголовок</string>
    <string name="description">Описание</string>
    <string name="alarm_is_off">Отключен</string>
    <string name="alarm_state">Состояние будильника</string>
    <string name="alarm_is_on">Включен</string>
    <string name="choose_date">Выбрать дату</string>
    <string name="choose_time">Выбрать время</string>

    <!--login screen-->
    <string name="title_activity_login">Login</string>

    <!--schedule screen-->
    <string name="schedule_title">Расписание пар</string>
    <string name="button_ok_text">ОК</string>
    <string name="dialog_group_title">Группа:</string>
    <string name="edit_schedule_title">Редактирование</string>
    <string name="dialog_add_lesson_title">Добавить</string>

    <!--schedule of bells screen-->
    <string name="title_activity_bells_schedule">Schedule of Bells</string>
    <string name="dialog_time">Время:</string>
    <string name="dialog_subject">Предмет:</string>
    <string name="dialog_teacher">Преподаватель</string>
    <string name="dialog_room">Аудитория:</string>
    <string name="dialog_type1">Практика</string>
    <string name="dialog_type2">Лекция</string>

</resources>
