<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.epam.denis_telezhenko.universityhelper.ui.details.EditNoteFragment"
    android:layout_margin="8dp">

    <android.support.v7.widget.CardView
        android:id="@+id/title_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/details_edit__title_InputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/title"
            android:layout_margin="8dp">

        <EditText
            android:id="@+id/details_edit__title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="@dimen/drawable_padding"
            android:drawableStart="@drawable/ic_title_24dp"
            android:ems="10"
            android:inputType="text"
            android:lineSpacingExtra="8sp"
            android:nextFocusDown="@id/details_edit__desc"
            android:textAppearance="@style/TextAppearance.AppCompat.Small.Inverse" />
        </android.support.design.widget.TextInputLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_marginTop="12dp"
        android:id="@+id/description_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_card">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/details_edit__desc_InputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:hint="@string/description"
            android:layout_margin="8dp">

            <EditText
                android:id="@+id/details_edit__desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="@dimen/drawable_padding"
                android:drawableStart="@drawable/ic_description_24dp"
                android:lines="7"
                android:ems="10"
                android:overScrollMode="always"
                android:scrollbarStyle="insideInset"
                android:scrollbars="vertical"
                android:gravity="top|start"
                android:inputType="textMultiLine"
                android:lineSpacingExtra="8sp"
                android:textAppearance="@style/TextAppearance.AppCompat.Small.Inverse" />
        </android.support.design.widget.TextInputLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_marginTop="12dp"
        android:id="@+id/alarm_clock_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/description_card">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="end">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:layout_marginTop="8dp"
                android:textSize="@dimen/alarm_state_textSize"
                android:text="@string/alarm_state"/>

            <RadioGroup
                android:id="@+id/details_edit__alarm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="horizontal"
                android:layout_margin="8dp">

                <RadioButton
                    android:id="@+id/details_edit__alarm_off"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/alarm_is_off"
                    android:checked="true"/>

                <RadioButton
                    android:id="@+id/details_edit__alarm_on"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/alarm_is_on" />
            </RadioGroup>

            <TextView
                android:id="@+id/details_edit__choose_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:clickable="true"
                android:focusable="true"
                android:textColor="@color/timeColor"
                android:layout_marginEnd="8dp"
                android:text="@string/choose_date"
                android:visibility="gone"/>

            <TextView
                android:id="@+id/details_edit__choose_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                android:padding="8dp"
                android:textColor="@color/timeColor"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/choose_time"
                android:visibility="gone"/>

        </LinearLayout>
    </android.support.v7.widget.CardView>

    <Button
        android:id="@+id/details_edit__edit_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/edit"
        app:layout_constraintBottom_toBottomOf="parent"/>

</android.support.constraint.ConstraintLayout>
